--- a/index.html
+++ b/index.html
@@ -1,175 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chapters Viewer & PDF Converter</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #121212;
-      color: #ffffff;
-      text-align: center;
-    }
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-      margin-bottom: 5px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
-    }
-    h1 {
-      margin: 20px;
-      font-size: 24px;
-      color: #f5f5f5;
-    }
-    input, button {
-      margin: 10px;
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 5px;
-      border: none;
-    }
-    input {
-      width: 80%;
-      max-width: 400px;
-    }
-    button {
-      background: #ff4081;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #e91e63;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Open M2</title>
 </head>
 <body>
-  <h1>Chapters Viewer</h1>
-  
-  <div>
-    <input type="text" id="baseUrl" placeholder="Enter base URL (e.g., https://example.com/)" required>
-    <input type="number" id="totalChapters" placeholder="Enter number of chapters/pages" required>
-    <button onclick="loadImages()">Load Images</button>
-  </div>
-  
-  <button onclick="downloadPDF()">Download as PDF</button>
-
-  <div class="container" id="imageContainer">
-    <h2>Enter details and click 'Load Images'</h2>
-  </div>
-
-  <script>
-    let imageElements = [];
-
-    async function loadImages() {
-      const container = document.getElementById('imageContainer');
-      container.innerHTML = ''; // Clear previous images
-      imageElements = [];
-
-      let baseUrl = document.getElementById('baseUrl').value.trim();
-      const totalChapters = parseInt(document.getElementById('totalChapters').value);
-      const formats = ["jpg", "jpeg", "png", "webp"];
-
-      if (!baseUrl || isNaN(totalChapters) || totalChapters <= 0) {
-        alert("Please enter a valid URL and number of chapters/pages.");
-        return;
-      }
-
-      if (!baseUrl.endsWith('/')) {
-        baseUrl += '/';
-      }
-
-      console.log("Starting image loading...");
-
-      let loadedImages = 0;
-
-      for (let chapter = 1; chapter <= totalChapters; chapter++) {
-        let img = document.createElement('img');
-        img.alt = `Chapter ${chapter}`;
-        
-        let found = false;
-
-        for (let format of formats) {
-          let testSrc = `${baseUrl}${chapter}.${format}`;
-          let exists = await checkImageExists(testSrc);
-          
-          if (exists) {
-            img.src = testSrc;
-            container.appendChild(img);
-            imageElements.push(img);
-            loadedImages++;
-            found = true;
-            console.log(`Loaded: ${testSrc}`);
-            break;
-          }
-        }
-
-        if (!found) {
-          let errorText = document.createElement('p');
-          errorText.style.color = 'red';
-          errorText.textContent = `Image not found: Chapter ${chapter}`;
-          container.appendChild(errorText);
-          console.error(`No valid format found for Chapter ${chapter}`);
-        }
-      }
-
-      if (loadedImages === 0) {
-        alert("No images were loaded. Please check your URL.");
-      }
-    }
-
-    function checkImageExists(url) {
-      return new Promise((resolve) => {
-        let img = new Image();
-        img.src = url;
-        img.onload = () => resolve(true);
-        img.onerror = () => resolve(false);
-      });
-    }
-
-    async function downloadPDF() {
-      if (imageElements.length === 0) {
-        alert("No images loaded. Please load images first.");
-        return;
-      }
-
-      const { jsPDF } = window.jspdf;
-      let pdf = new jsPDF('p', 'mm', 'a4');
-      let imgWidth = 210;
-      let pageHeight = 297;
-      let yPosition = 0;
-
-      console.log(`Processing ${imageElements.length} images...`);
-
-      for (let i = 0; i < imageElements.length; i++) {
-        let img = imageElements[i];
-
-        let canvas = await html2canvas(img, { scale: 2 });
-        let imgData = canvas.toDataURL('image/jpeg');
-        let imgHeight = (canvas.height * imgWidth) / canvas.width;
-
-        if (yPosition + imgHeight > pageHeight) {
-          pdf.addPage();
-          yPosition = 0;
-        }
-
-        pdf.addImage(imgData, 'JPEG', 0, yPosition, imgWidth, imgHeight);
-        yPosition += imgHeight;
-      }
-
-      pdf.save("Chapters.pdf");
-      console.log("PDF Downloaded.");
-    }
-  </script>
+    <h1>Open M2 Page</h1>
+    <p>Click the link below to open <code>Math-2/M2.html</code>:</p>
+    <a href="Math-2/M2.html" target="_blank">Open M2</a>
 </body>
 </html>
