--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Open M2 Page</h1>
     <p>Click the link below to open <code>Math-2/M2.html</code>:</p>
-    <a href="Math-2/M2.html" target="_blank">Open M2</a>
+    <a href="Math-2/index.html" target="_blank">Open M2</a>
 </body>
 </html>
