--- a/Math-2/index.html
+++ b/Math-2/index.html
@@ -10,7 +10,7 @@
     <div id="subject-container">
         <h1>Select a Subject</h1>
     </div>
-
+     <div id="content"></div>
     <script src="data.js"></script>
     <script src="script.js"></script>
 </body>
