--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open M2</title>
+    <title>Subjects</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Open M2 Page</h1>
-    <p>Click the link below to open <code>Math-2/M2.html</code>:</p>
-    <a href="Math-2/index.html" target="_blank">Open M2</a>
+    <h1>Select a Subject</h1>
+    <div class="container">
+        <a href="Math-1/index.html" class="subject-box" target="_blank">Math-1</a>
+        <a href="Math-2/index.html" class="subject-box" target="_blank">Math-2</a>
+        <a href="Physics-1/index.html" class="subject-box" target="_blank">Physics-1</a>
+        <a href="Physics-2/index.html" class="subject-box" target="_blank">Physics-2</a>
+        <a href="Chemistry/index.html" class="subject-box" target="_blank">Chemistry</a>
+        <a href="Computer-Science/index.html" class="subject-box" target="_blank">Computer Science</a>
+        <a href="Electronics/index.html" class="subject-box" target="_blank">Electronics</a>
+        <a href="Mechanical/index.html" class="subject-box" target="_blank">Mechanical</a>
+        <a href="Civil/index.html" class="subject-box" target="_blank">Civil</a>
+        <a href="Biology/index.html" class="subject-box" target="_blank">Biology</a>
+    </div>
 </body>
 </html>
